fix($style): add more whitespace on list pages and darken muted text

--- a/layouts/partials/head/critical-theme.css
+++ b/layouts/partials/head/critical-theme.css
@@ -10,9 +10,9 @@
   }
 }
 .muted {
-  color: rgba(255, 255, 255, 0.5);
+  color: #59757880;
 }
-.readmore {
+.hack .readmore {
   margin-bottom: 2.2em;
 }
 .responsive-iframe {
